# ifto-spi-ntdweb-jobz

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  setup.cfg
src/: manage.py
src/assets/css/: dashboard.css
src/core/: admin.py  mask_utils.py  models.py  signals.py  urls.py
src/core/fixtures/: area_atuacao.json  cargos.json  estados_civis.json  formas_contratacao.json  generos.json  turnos.json  ufs.json
src/core/forms/: candidato.py  empresa.py  experiencia.py  vaga.py
src/core/migrations/: 0001_initial.py
src/core/templates/: dashboard.html
src/core/templates/candidato/: delete.html  form.html  list.html
src/core/templates/empresa/: delete.html  form.html  list.html
src/core/templates/vaga/: delete.html  form.html  list.html
src/core/templatetags/: app.py
src/core/views/: candidato.py  empresa.py  vaga.py
src/jobz/: asgi.py  settings.py  urls.py  wsgi.py
src/notebooks/: Shell.ipynb
