[tool.pdm]
includes = []
[tool.pdm.dev-dependencies]
dev = [
    "autopep8<2.0.0,>=1.5.7",
    "django-stubs<2.0.0,>=1.9.0",
    "isort<6.0.0,>=5.9.3",
    "mypy<1.0,>=0.910",
    "ipython~=7.30",
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "jobz"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Nunes", email = "nunessvictorr@gmail.com"},
    {name = "Victor Nunes",email = "victor.gn@defensoria.to.def.br"}
]
dependencies = ["Django<4.0.0,>=3.2.8", "django-crispy-forms<2.0.0,>=1.13.0", "psycopg2-binary<3.0.0,>=2.9.1"]
requires-python = ">=3.9,<4.0"
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
